--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,38 @@
-<h2>Sign up</h2>
+<fieldset class="container">	
+	<div class="row">
+		<div class="col-lg-4 col-lg-offset-2">
+			<h3 class="page-header">Sign up</h3>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+			<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+			  <%= devise_error_messages! %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true %>
-    <%= f.input :password_confirmation, required: true %>
-  </div>
+			  <div class="form-group"><%= f.label :email %><br />
+			  <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+			  <div class="form-group"><%= f.label :password %><br />
+			    <%= f.password_field :password, autocomplete: "off", class: "form-control" %></div>
 
-<%= render "devise/shared/links" %>
+			  <div class="form-group"><%= f.label :password_confirmation %><br />
+			    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
+
+			  <div class="form-group"><%= f.submit "Sign up", class: "btn btn-primary" %></div>
+			<% end %>
+		</div>
+
+		<div class="col-lg-2">
+			<%- if devise_mapping.omniauthable? %>
+			<h3 class="page-header">Sign in with</h3>
+			<br ><br>
+			  <%- resource_class.omniauth_providers.each do |provider| %>
+			    <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), :class=>"#{provider.to_s.titleize}" %><br />
+			  <% end -%>
+			<% end -%>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-lg-9 col-lg-offset-3">
+			<%= render "devise/shared/links" %>
+		</div>
+	</div>
+</fieldset>
