--- a/app/views/make/recipes.html.erb
+++ b/app/views/make/recipes.html.erb
@@ -1,7 +1,18 @@
 <%= render 'layouts/navbar' %>
-<h1>Receipes</h1>
+<h1 class="page-header">Listing Receipes</h1>
+
 <% @recipes.each do |recipe| %>
-<div class="alert">
-	<%= recipe.details_dump %>
+<div class="container-fluid">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img data-src="<%= recipe.details_dump %>" >
+      <div class="caption">
+        <h3><%= recipe.recipe_name %>
+        <span> <%= recipe.cost %> </span>
+        </h3>
+        <p><%= recipe.ingredients.to_s %></p>
+      </div>
+    </div>
+  </div>
 </div>
 <% end %>
